fix icon ie bug

--- a/src/scss/_layouts.featured.scss
+++ b/src/scss/_layouts.featured.scss
@@ -12,7 +12,7 @@
             line-height: 1.2;
 
             &:before{
-                content: "check";
+                content: "\e5ca";
                 position: absolute;
                 left: 0;
                 top: 0;
