--- a/src/scss/_layouts.second.scss
+++ b/src/scss/_layouts.second.scss
@@ -13,7 +13,7 @@
             line-height: 1.2;
 
             &:before{
-                content: "check";
+                content: "\e5ca";
                 position: absolute;
                 left: 0;
                 top: 0;
